summative.moria.Moria.scala.error
Erreur de compilation :
Moria:5: error: value avance is not a member of Unit
droite();avance();gauche()avance() 
                          ^