summative.moria.Moria.scala.code
retourne()
while(estFaceMur==false){
  avance()
}
droite();avance();gauche()avance()